--- a/src/components/views/HomePage/Homepage.module.scss
+++ b/src/components/views/HomePage/Homepage.module.scss
@@ -2,6 +2,7 @@
 
 .title{
   text-align: center;
+
 }
 
 .background {
@@ -10,5 +11,16 @@
 
 .sideSwitch {
   flex-direction: row-reverse !important;
+}
+
+.description {
+  max-width: 720px;
+  text-align: center;
+  margin: 0 auto;
+  border-top: solid;
+  border-bottom: solid;
+  border-width: 2px;
+  font-size: 20px;
+  border-radius: 10px;
 }
 
